[package]
name = "rsx-project"
version = "0.1.0"
edition = "2021"
default-run = "rsx"

[[bin]]
name = "rsx"
path = "src/main.rs"

[[bin]]
name = "server"
path = "src/bin/app_server.rs"

[dependencies]
tokio = "^1"
serde = "^1"
serde_json = "^1"
actix-web = "^4"

[workspace]
members = [
    "packages/rsx-cli",
    "packages/rsx-compiler",
    "packages/rsx-runtime",
    "packages/rsx-server"
]
